# volume-strat-liq

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: backfill-intraday.yml  backfill-options.yml  deploy.yml  install-intraday-reports.yml
app/: __init__.py  server.py
app/static/: app.js  index.html  intraday.html  intraday_report.js  styles.css  terminal.html  terminal.js
backtest/: intraday_volume_spike.py  liquidity_sweep_backtest.py  options_overlay.py
config/: logging.yaml  strategy.yaml  universe.yaml
infra/nginx/: liq-sweep.conf
scripts/: ec2_backup_data.sh  ec2_deploy.sh  install_git_hooks.sh  upstox_backfill.mjs  upstox_intraday_backfill.mjs  upstox_signal_options_backfill.mjs
src/: __init__.py  app.py  clock.py  config.py  terminal.py  terminal_runtime.py
src/analytics/: __init__.py  indicators.py  rolling_state.py  tod_baseline.py
src/backtest/: __init__.py  data_loader.py  metrics.py  runner.py  walk_forward.py
src/execution/: __init__.py  base.py  paper.py  upstox_live.py
src/ingest/: __init__.py  bar_aggregator.py  feeds.py  upstox_rest.py  upstox_ws.py
src/obs/: __init__.py  metrics.py
src/risk/: __init__.py  costs.py  portfolio.py  sizer.py
src/signals/: __init__.py  base.py  breakout.py  filters.py
src/upstox/: backfill.mjs  universe.mjs
tests/: test_intraday_volume_spike.py  test_liquidity_sweep_backtest.py  test_options_overlay.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  (+1 more)
(+31 files in other folders)
